--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇸🇬 新加坡-3.67MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.56MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-5.73MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.85MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 捷克-5.07MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇺🇸 美国-4.70MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.56MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
   - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
   - {name: 🇻🇳 越南-1.90MB/s(Youtube:不良林), server: 103.90.220.27, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.90.220.27}}
   - {name: 🇩🇪 德国-1.10MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇺🇸 美国-5.47MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.68MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-6.14MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 捷克-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 捷克-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 捷克-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 捷克-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 捷克-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 捷克-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 捷克-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
