--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.74MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-337.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.74MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.71MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
-  - {name: 🇬🇧 英国-3.12MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.70MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇮🇳 印度-3.02MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.51MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-759.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-3.09MB/s(Youtube:不良林), server: 134.195.196.150, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-1.86MB/s(Youtube:不良林), server: 134.195.196.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-2.93MB/s(Youtube:不良林), server: 134.195.196.150, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-337.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
