--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-6.14MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.08MB/s(Youtube:不良林), server: 134.195.196.150, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.06MB/s(Youtube:不良林), server: 134.195.196.150, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.61MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.06MB/s(Youtube:不良林), server: 134.195.196.150, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-3.09MB/s(Youtube:不良林), server: 134.195.196.150, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-1.86MB/s(Youtube:不良林), server: 134.195.196.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.93MB/s(Youtube:不良林), server: 134.195.196.150, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇫🇷 法国-1.32MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林), server: 134.195.196.150, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-3.09MB/s(Youtube:不良林), server: 134.195.196.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.28MB/s(Youtube:不良林), server: 134.195.196.150, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 134.195.196.150, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇬🇧 英国-2.98MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-6.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.28MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
 rules:
